[package]
name = "openslide_internals"
version = "0.1.0"
publish = false
authors = [
    "Adam Goode",
    "Benjamin Gilbert",
    "Jan Harkes <jaharkes@cs.cmu.edu>",
]
edition = "2018"
homepage = "https://openslide.org/"
repository  = "https://github.com/openslide/openslide/"
license = "LGPL-2.1-only"
#links = "glib-2.0"

[dependencies]
glib-sys = "0.4.0"
linked-hash-map = "0.5.3"
sha2 = "0.9.1"

[lib]
name = "openslide_internals"
crate-type = ["staticlib"]

[profile.release]
lto = true
